--- a/src/index.scss
+++ b/src/index.scss
@@ -38,6 +38,11 @@ a:hover {
     color: #7da468;
 }
 
+.no-horizontal-padding {
+    padding-right: 0;
+    padding-left: 0;
+}
+
 .container-fluid {
     padding-right: 0;
     padding-left: 0;
