--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,7 @@
 @import "../assets/stylesheets/bootstrap-sass/assets/stylesheets/_bootstrap-compass.scss";
 @import "../assets/stylesheets/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
 
+@import "./components/accordion/accordion.scss";
 @import "./components/dashboard/dashboard.scss";
 @import "./components/home/home.scss";
 
