--- a/src/components/dashboard/dashboard.scss
+++ b/src/components/dashboard/dashboard.scss
@@ -1,3 +1,4 @@
 @import "./header/header.scss";
 @import "./project-list/project-list.scss";
 @import "./sidebar/sidebar.scss";
+@import "./status-box/status-box.scss";
