--- a/src/components/dashboard/project-list/project-list.scss
+++ b/src/components/dashboard/project-list/project-list.scss
@@ -1,3 +1,5 @@
+@import "./task-list-items/task-list-items.scss";
+
 .project-list {
     ul {
         list-style-type: none;
@@ -22,14 +24,5 @@
         .active {
             background: #312F33;
         }
-    }
-
-    .task-list {
-        padding: 10px 15px 10px 30px;
-        display: block;
-        font-size: .9em;
-        color: #DBDBDB;
-        font-weight: normal;
-        margin: 0;
     }
 }
