feat: add ability to create and delete projects and task lists

--- a/src/components/dashboard/project-list/project-list.scss
+++ b/src/components/dashboard/project-list/project-list.scss
@@ -25,4 +25,12 @@
             background: #312F33;
         }
     }
+
+    .add-project-link {
+        color: #888888 !important;
+
+        &:hover {
+            color: #DBDBDB !important;
+        }
+    }
 }
