--- a/src/components/dashboard/project-list/task-list-items/task-list-item/task-list-item.scss
+++ b/src/components/dashboard/project-list/task-list-items/task-list-item/task-list-item.scss
@@ -1,3 +1,17 @@
+.task-list-item-actions {
+    float: right;
+    color: #888888;
+
+    span {
+        padding: 2px 6px;
+
+        &:hover {
+            background: #888888;
+            color: #DBDBDB;
+        }
+    }
+}
+
 .add-task-list-link {
     color: #888888 !important;
 
