--- a/src/components/dashboard/header/header.scss
+++ b/src/components/dashboard/header/header.scss
@@ -3,6 +3,8 @@
     border-bottom: 1px solid #e0e0e0;
     padding: 10px 15px;
     border-radius: 0;
+    float: left;
+    width: 100%;
 
     #logo {
         font-weight: bold;
