--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -1,6 +1,10 @@
-@import "./greeting/greeting.scss";
-@import "./navigation-bar/navigation-bar.scss";
+.content-pane {
+    width: calc(100% - 250px);
+    float: left;
+    height: 100vh;
 
-.content {
-    margin: 40px;
+    &:after {
+        display: block;
+        content: "";
+    }
 }
