feat: add project deletion

--- a/src/components/home/project-list/project-list.scss
+++ b/src/components/home/project-list/project-list.scss
@@ -5,7 +5,7 @@
         margin-bottom: 0;
     }
 
-    .project,
+    .project-item,
     .add-new-project {
         padding: 10px 15px;
         display: block;
