--- a/src/components/home/header/header.scss
+++ b/src/components/home/header/header.scss
@@ -17,4 +17,19 @@
             padding: 16px 0 14px 10px;
         }
     }
+
+    .text-filter {
+        padding-top: 7px;
+
+        input {
+            width: 100%;
+
+            &:focus {
+                outline: none;
+                border-color: inherit;
+                -webkit-box-shadow: none;
+                box-shadow: none;
+            }
+        }
+    }
 }
