--- a/src/index.scss
+++ b/src/index.scss
@@ -35,6 +35,10 @@ a:hover {
     color: #7da468;
 }
 
+input:focus {
+    outline: none;
+}
+
 .no-horizontal-padding {
     padding-right: 0;
     padding-left: 0;
