feat: add analytics module

--- a/src/components/home/module/module-header/module-header.scss
+++ b/src/components/home/module/module-header/module-header.scss
@@ -26,7 +26,8 @@
     }
 }
 
-.content-pane-module-header {
+.content-pane-module-header,
+.bottom-drawer-module-header {
     padding: 10px 15px;
     background: #636066;
     color: #dbdbdb;
