--- a/src/components/home/module/module.scss
+++ b/src/components/home/module/module.scss
@@ -1,6 +1,10 @@
-.content-pane-module {
+.content-pane-module,
+.bottom-drawer-module {
     background: #ffffff;
-    margin-top: 15px;
     padding-left: 0;
     padding-right: 0;
+}
+
+.content-pane-module {
+    margin-top: 15px;
 }
