--- a/src/components/view-edit-toggle-field/view-edit-toggle-field.scss
+++ b/src/components/view-edit-toggle-field/view-edit-toggle-field.scss
@@ -1,4 +1,4 @@
-.add-new {
+.view-edit-toggle-field {
     font-size: .9em;
 
     a {
@@ -28,13 +28,13 @@
     }
 }
 
-.add-new-project {
+.project-view-edit-toggle-field {
     a {
         font-weight: bold;
     }   
 }
 
-.add-new-task-list {
+.task-list-view-edit-toggle-field {
     a {
         padding-left: 30px;
 
