refactor: rename ProjectItem

--- a/src/components/home/project-filter-container/project-filter-container.scss
+++ b/src/components/home/project-filter-container/project-filter-container.scss
@@ -1,4 +1,4 @@
-.project-filter {
+.project-filter-container {
     ul {
         list-style-type: none;
         padding-left: 0;
@@ -11,7 +11,7 @@
         }
     }
 
-    .project-item {
+    .project-filter {
         padding: 10px 15px;
         display: block;
         font-size: .9em;
