refactor: rename item-actions

--- a/src/components/home/project-filter-container/project-filter-container.scss
+++ b/src/components/home/project-filter-container/project-filter-container.scss
@@ -30,7 +30,8 @@
         }
     }
 
-    .item-actions {
+    .project-filter-actions,
+    .task-list-filter-actions {
         float: right;
         color: #888888;
 
