refactor: rename BottomDrawer

--- a/src/components/home/module/module-header/module-header.scss
+++ b/src/components/home/module/module-header/module-header.scss
@@ -27,7 +27,7 @@
 }
 
 .content-pane-module-header,
-.bottom-drawer-module-header {
+.analytics-module-header {
     padding: 10px 15px;
     background: #636066;
     color: #dbdbdb;
