--- a/src/components/home/module/module.scss
+++ b/src/components/home/module/module.scss
@@ -1,5 +1,5 @@
 .content-pane-module,
-.bottom-drawer-module {
+.analytics-module {
     background: #ffffff;
     padding-left: 0;
     padding-right: 0;
