--- a/src/components/module/module-header/module-header.scss
+++ b/src/components/module/module-header/module-header.scss
@@ -26,7 +26,7 @@
     }
 }
 
-.content-pane-module-header,
+.content-module-header,
 .analytics-module-header {
     padding: 10px 15px;
     background: #636066;
