--- a/src/components/home/task-table/task-table-row/task-table-row.scss
+++ b/src/components/home/task-table/task-table-row/task-table-row.scss
@@ -1,12 +1,25 @@
 #task-table {
-    .complete td {
-        text-decoration: line-through;
-        color: #b3b3b3;
-
-        input {
+    .complete {
+        td:not(.delete-task) {
             text-decoration: line-through;
-            background: none;
-            border: none;
+            color: #b3b3b3;
+
+            input {
+                text-decoration: line-through;
+                background: none;
+                border: none;
+            }
+        }
+    }
+
+    .delete-task {
+        span {
+            padding: 2px 7px;
+
+            &:hover {
+                background: #d3d2d1;
+                cursor: pointer;
+            }
         }
     }
 }
