--- a/src/components/home/analytics/analytics.scss
+++ b/src/components/home/analytics/analytics.scss
@@ -30,4 +30,13 @@
     .drawer {
         padding: 15px 15px 0 15px;
     }
+
+    #no-analytics-available {
+        margin-bottom: 30px;
+        font-size: .9em;
+    }
+
+    .quotation {
+        margin-left: 40px;
+    }
 }
