feat: remove italics from placeholder text, because Kate hates italics

--- a/src/components/home/task-table/new-task-row/new-task-row.scss
+++ b/src/components/home/task-table/new-task-row/new-task-row.scss
@@ -6,18 +6,22 @@
 
             &::-moz-placeholder {
                 color: #b3b3b3;
+                font-style: normal;
             }
 
             &:-moz-placeholder {
                 color: #b3b3b3;
+                font-style: normal;
             }
 
             &::-webkit-input-placeholder {
                 color: #b3b3b3;
+                font-style: normal;
             }
             
             &:-ms-input-placeholder {
                 color: #b3b3b3;
+                font-style: normal;
             }
         }
     }
