--- a/src/components/module/module-header/module-header.scss
+++ b/src/components/module/module-header/module-header.scss
@@ -1,6 +1,6 @@
 .sidebar-module-header {
     background: #5e804d;
-    padding: 10px 15px;
+    padding: 10px;
     color: #ffffff;
     letter-spacing: 1px;
 
