feat: improve task table styles

--- a/src/components/home/task-table/new-task-row/new-task-row.scss
+++ b/src/components/home/task-table/new-task-row/new-task-row.scss
@@ -4,6 +4,14 @@
             background: none;
             border: none;
 
+            &:hover {
+                cursor: pointer;
+            }
+
+            &:focus {
+                cursor: text;
+            }
+
             &::-moz-placeholder {
                 color: #b3b3b3;
                 font-style: normal;
