--- a/src/components/home/task-table/task-table-row/task-table-row.scss
+++ b/src/components/home/task-table/task-table-row/task-table-row.scss
@@ -1,4 +1,8 @@
 #task-table {
+    input {
+        width: 100%;
+    }
+    
     .complete {
         td:not(.delete-task) {
             text-decoration: line-through;
