--- a/src/components/home/analytics/analytics.scss
+++ b/src/components/home/analytics/analytics.scss
@@ -5,12 +5,12 @@
     left: 275px;
     bottom: 0;
     width: calc(100% - 275px);
+    font-size: .9em;
 
     .toggle-bar {
         padding: 10px 15px;
 
         .toggle {
-            font-size: .9em;
             text-transform: uppercase;
             color: #373737;
             letter-spacing: 1px;
@@ -32,11 +32,8 @@
     }
 
     #no-analytics-available {
-        margin-bottom: 30px;
-        font-size: .9em;
-    }
-
-    .quotation {
-        margin-left: 40px;
+        margin: 40px 0 20px 0;
+        text-align: center;
+        color: #888888;
     }
 }
