--- a/src/components/home/header/header.scss
+++ b/src/components/home/header/header.scss
@@ -2,6 +2,7 @@
     background: #ffffff;
     border-bottom: 1px solid #e0e0e0;
     padding: 10px 15px;
+    margin-bottom: 15px;
     border-radius: 0;
     float: left;
     width: 100%;
