refactor: convert projects and task lists into task groups

--- a/src/components/home/sidebar/sidebar.scss
+++ b/src/components/home/sidebar/sidebar.scss
@@ -1,8 +1,9 @@
-#sidebar {
+.sidebar {
     height: 100vh;
     background: #3C393F;
     color: #dbdbdb;
     float: left;
     overflow-y: auto;
     width: 275px;
+    font-size: .9em;
 }
