--- a/src/components/home/header/header.scss
+++ b/src/components/home/header/header.scss
@@ -1,4 +1,4 @@
-#header {
+.header {
     background: #ffffff;
     border-bottom: 1px solid #e0e0e0;
     padding: 10px 15px;
@@ -6,4 +6,5 @@
     border-radius: 0;
     float: left;
     width: 100%;
+    font-size: .9em;
 }
