--- a/src/index.scss
+++ b/src/index.scss
@@ -39,6 +39,10 @@ input:focus {
     outline: none;
 }
 
+.btn {
+    border-radius: 0;
+}
+
 .no-horizontal-padding {
     padding-right: 0;
     padding-left: 0;
