style: add margin to task detail form and adjust verbiage and capitalization

--- a/src/components/home/task-container/task-table/task-table-task-details/task-table-task-details.scss
+++ b/src/components/home/task-container/task-table/task-table-task-details/task-table-task-details.scss
@@ -1,5 +1,5 @@
 .task-table-task-details {
-    margin-top: 15px;
+    margin: 15px 15px auto auto;
     font-size: .9em;
 
     textarea.form-control {
