--- a/src/components/home/task-container/task-table/task-table.scss
+++ b/src/components/home/task-container/task-table/task-table.scss
@@ -1,13 +1,5 @@
 .task-table {
-    font-size: .9em;
-
-    caption {
-        padding: 0 0 10px 0;
-        font-size: .9em;
-        text-align: right;
-    }
-
     input {
-        width: 100%;
+        width: 100%
     }
 }
