--- a/src/components/fields/view-edit-toggle-field/view-edit-toggle-field.scss
+++ b/src/components/fields/view-edit-toggle-field/view-edit-toggle-field.scss
@@ -1,6 +1,7 @@
 .view-edit-toggle-field,
 .view-edit-toggle-field-edit-mode {
     input {
+        width: 100%;
         background: none;
         border: none;
     }
