--- a/src/components/sandbox/task-table-task/task-table-task-details.scss
+++ b/src/components/sandbox/task-table-task/task-table-task-details.scss
@@ -1,7 +1,8 @@
 .task-table-task-details {
     margin: 15px 15px auto auto;
 
-    textarea {
+    textarea.form-control {
         height: 150px;
+        padding: 10px;
     }
 }
