--- a/src/components/home/task-container/task-list/task-list-item/task-list-item.scss
+++ b/src/components/home/task-container/task-list/task-list-item/task-list-item.scss
@@ -2,15 +2,10 @@
     width: 100%;
     border-bottom: 1px solid #e6e6e8;
 
-    input[type=checkbox] {
-        width: 30px;
-        display: inline-block;
-    }
-
     .task-brief {
         display: inline-block;
         width: calc(100% - 30px);
-        margin: 0px auto;
+        margin: 0 0 0 15px;
         
         input {
             width: calc(100% - 30px);
