styles: add different UI state for completed tasks, add checkmark animation

--- a/src/components/home/task-container/task-list/task-list-item/task-list-item.scss
+++ b/src/components/home/task-container/task-list/task-list-item/task-list-item.scss
@@ -34,6 +34,13 @@
         }
     }
 
+    .task-brief.task-complete {
+        input {
+            text-decoration: line-through;
+            color: #cccccc;
+        }
+    }
+
     .task-brief.edit-mode {
         input {
             border: 1px solid #e6e6e8;
