--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 @import "../assets/stylesheets/bootstrap-sass/assets/stylesheets/_bootstrap-compass.scss";
 @import "../assets/stylesheets/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
+@import "../assets/stylesheets/animate.css";
 
 * {
     box-sizing: border-box;
