style: improved new task item UI

--- a/src/components/home/task-container/task-list/task-list-new-item/task-list-new-item.scss
+++ b/src/components/home/task-container/task-list/task-list-new-item/task-list-new-item.scss
@@ -1,9 +1,11 @@
 .task-list-new-item {
-    margin-left: 30px;
+    background: #F5F3F2;
+    padding: 0px 15px 0px 45px;
 
     input {
-        padding: 5px 8px;
-        border: none;
+        padding: 10px;
+        border: none !important;
+        background: none;
 
         &:hover {
             cursor: pointer;
@@ -14,27 +16,23 @@
         }
 
         &::-moz-placeholder {
-            color: #b3b3b3;
             font-style: normal;
-            line-height: 16.2px;
+            color: #888888;
         }
 
         &:-moz-placeholder {
-            color: #b3b3b3;
             font-style: normal;
-            line-height: 16.2px;
+            color: #888888;
         }
 
         &::-webkit-input-placeholder {
-            color: #b3b3b3;
             font-style: normal;
-            line-height: 16.2px;
+            color: #888888;
         }
             
         &:-ms-input-placeholder {
-            color: #b3b3b3;
             font-style: normal;
-            line-height: 16.2px;
+            color: #888888;
         }
     }
 }
