--- a/src/components/home/group-filter-container/group-filter/group-filter.scss
+++ b/src/components/home/group-filter-container/group-filter/group-filter.scss
@@ -1,4 +1,15 @@
 .group-filter {
+    input[type=text] {
+        display: inline-block;
+        width: 180px;
+        padding: 0;
+        height: auto;
+        font-size: 1em;
+        border: none;
+        color: #dbdbdb;
+        background: none;
+    }
+
     .group-filter-name {
         &:hover {
             cursor: pointer;
@@ -10,8 +21,9 @@
         color: #888888;
         margin-left: 10px;
 
-        span {
-            padding: 2px 6px;
+        span,
+        i {
+            padding: 2px 5px;
 
             &:hover {
                 //background: #888888;
