refactor: replace hard-coded icon with component

--- a/src/components/accordion/accordion-item.scss
+++ b/src/components/accordion/accordion-item.scss
@@ -1,5 +1,5 @@
 .accordion-item {
-    .accordion-toggle {
+    .toggle {
         padding: 6px 0;
         width: 13px;
         text-align: center;
