--- a/src/components/home/task-container/task-list/task-list-item/task-list-item.scss
+++ b/src/components/home/task-container/task-list/task-list-item/task-list-item.scss
@@ -53,5 +53,42 @@
 
     .task-details {
         margin: 15px 30px 0 30px;
+        
+        textarea.form-control {
+            height: 100px;
+        }
+
+        .task-details-message {
+            font-size: .8em;
+            color: #888888;
+            margin-left: 10px;
+            display: inline-block;
+
+            /*&:after {
+                overflow: hidden;
+                display: inline-block;
+                vertical-align: bottom;
+                -webkit-animation: ellipsis steps(4,end) 900ms infinite;      
+                animation: ellipsis steps(4,end) 900ms infinite;
+                content: "\2026";
+                width: 0px;
+            }
+
+            @keyframes ellipsis {
+                to {
+                    width: 1.25em;    
+                }
+            }
+
+            @-webkit-keyframes ellipsis {
+                to {
+                    width: 1.25em;    
+                }
+            }*/
+        }
+
+        .hidden {
+            opacity: 0;
+        }
     }
 }
