--- a/src/components/home/task-container/task-list/task-list-item/task-list-item.scss
+++ b/src/components/home/task-container/task-list/task-list-item/task-list-item.scss
@@ -1,6 +1,6 @@
 .task-list-item {
     width: 100%;
-    padding: 15px 15px;
+    padding: 15px;
     background: #ffffff;
     margin-bottom: 5px;
 
@@ -91,4 +91,8 @@
             opacity: 0;
         }
     }
+}
+
+.task-list-item.dimmed {
+    opacity: .5;
 }
