style: improve datepicker calendar UI

--- a/src/components/home/task-container/task-list/task-list-item/task-list-item.scss
+++ b/src/components/home/task-container/task-list/task-list-item/task-list-item.scss
@@ -22,7 +22,7 @@
 
         i {
             width: 20px;
-            padding: 10px 0;
+            padding: 15px 0 5px 0;
             text-align: center;
 
             &:hover {
