--- a/src/components/fields/date-box.scss
+++ b/src/components/fields/date-box.scss
@@ -17,5 +17,25 @@
     input {
         width: 100%;
         text-align: center;
+
+        &::-moz-placeholder {
+            font-style: normal;
+            font-size: .9em;
+        }
+
+        &:-moz-placeholder {
+            font-style: normal;
+            font-size: .9em;
+        }
+
+        &::-webkit-input-placeholder {
+            font-style: normal;
+            font-size: .9em;
+        }
+            
+        &:-ms-input-placeholder {
+            font-style: normal;
+            font-size: .9em;
+        }
     }
 }
