style: only cross out task name when complete

--- a/src/components/home/task-container/task-list/task-list-item/task-list-item.scss
+++ b/src/components/home/task-container/task-list/task-list-item/task-list-item.scss
@@ -49,7 +49,7 @@
         }
     }
 
-    .task-brief.task-complete {
+    .task-brief.task-complete .task-name {
         input {
             text-decoration: line-through;
             color: #cccccc;
