--- a/src/index.scss
+++ b/src/index.scss
@@ -45,6 +45,17 @@ input[type=text] {
     padding: 5px 10px;
 }
 
+.nav-pills > li.active > a,
+.nav-pills > li.active > a:hover,
+.nav-pills > li.active > a:focus {
+    background-color: #5e804d;
+}
+
+.nav > li > a {
+    padding: 4px 6px;
+    font-size: .9em;
+}
+
 .btn {
     border-radius: 0;
 }
