--- a/src/components/home/task-container/task-list/task-list-placeholder.scss
+++ b/src/components/home/task-container/task-list/task-list-placeholder.scss
@@ -1,5 +1,5 @@
 .task-list-placeholder {
-    margin-left: 55px;
+    margin: 20px 0 0 55px;
     border-left: 5px solid #e5e3e3;
     padding: 5px 0 15px 20px;
     font-size: 1.3em;
