--- a/src/components/home/task-container/task-list/task-list-placeholder.scss
+++ b/src/components/home/task-container/task-list/task-list-placeholder.scss
@@ -1,15 +1,13 @@
 .task-list-placeholder {
-    margin: 20px 0 0 55px;
-    border-left: 5px solid #e5e3e3;
-    padding: 5px 0 15px 20px;
+    margin: 20px 0 0 0;
     font-size: 1.3em;
     color: #888888;
+    text-align: center;
 
     .large {
         font-size: 3em;
         font-weight: 100;
         font-family: 'Roboto';
-        margin-left: -4px;
         display: block;
     }
 }
