--- a/src/components/home/task-container/task-list-view/task-list-filter-container/task-list-filter-wrapper.scss
+++ b/src/components/home/task-container/task-list-view/task-list-filter-container/task-list-filter-wrapper.scss
@@ -1,3 +1,12 @@
 .task-list-filter-wrapper {
     margin-bottom: 4px;
+
+    .task-list-completion-filter,
+    .task-list-date-filter {
+        display: inline-block;
+    }
+
+    .task-list-date-filter {
+        margin-left: 60px;
+    }
 }
