feat: remove image from logo, add light and dark versions

--- a/src/components/home/layout/sidebar/sidebar.scss
+++ b/src/components/home/layout/sidebar/sidebar.scss
@@ -7,6 +7,10 @@
     width: 275px;
     font-size: .9em;
 
+    .logo {
+        padding: 11px 10px;
+    }
+
     .accordion-item {
         .accordion-header {
             padding-left: 10px;
