--- a/src/components/login/registration-form.scss
+++ b/src/components/login/registration-form.scss
@@ -1,3 +1,21 @@
 #register {
     margin-left: 40px;
+
+    .form-control {
+        width: calc(100% - 30px);
+        display: inline-block;
+    }
+
+    i {
+        width: 30px;
+        text-align: center;
+    }
+
+    .invalid {
+        color: #b94a48;
+    }
+
+    .valid {
+        color: #7da468;
+    }
 }
