--- a/src/components/login/login.scss
+++ b/src/components/login/login.scss
@@ -15,6 +15,8 @@
 
         h2 {
             margin-top: 0;
+            font-family: 'Roboto';
+            font-weight: 300;
         }
     }
 }
