--- a/src/components/login/login-form.scss
+++ b/src/components/login/login-form.scss
@@ -1,4 +1,4 @@
 #login {
-    padding-right: 40px;
-    border-right: 1px solid #e0e0e0;
+    //padding-right: 40px;
+    //border-right: 1px solid #e0e0e0;
 }
