--- a/src/components/auth/auth-wrapper.scss
+++ b/src/components/auth/auth-wrapper.scss
@@ -1,11 +1,15 @@
-#authentication-page {
+#auth-wrapper {
     margin-top: 40px;
+
+    button {
+        margin-right: 10px;
+    }
 
     .logo {
         margin-left: 5px;
     }
 
-    #authentication-wrapper {
+    #form-wrapper {
         background: #ffffff;
         margin-top: 5px;
         padding: 40px;
