fix: unhide task view loading graphic

--- a/src/components/home/layout/content/content.scss
+++ b/src/components/home/layout/content/content.scss
@@ -7,4 +7,9 @@
         display: block;
         content: "";
     }
+
+    .loading-graphic {
+        float: left;
+        margin-top: 0;
+    }
 }
