fix: misaligned layout changes, added bundle.js to gitignore so we wouldn't have any more merge conflicts within that file

--- a/src/components/home/analytics/analytics.scss
+++ b/src/components/home/analytics/analytics.scss
@@ -1,7 +1,7 @@
 #analytics {
     background: #d3d2d1;
     border-top: 1px solid #c4c4c4;
-    position: absolute;
+    position: fixed;
     left: 275px;
     bottom: 0;
     width: calc(100% - 275px);
