--- a/src/index.scss
+++ b/src/index.scss
@@ -51,9 +51,15 @@ input[type=text] {
     background-color: #5e804d;
 }
 
-.nav > li > a {
+.nav > li > a,
+.nav > li > p {
     padding: 4px 6px;
     font-size: .9em;
+    margin: 0;
+}
+
+.nav > li > p {
+    color: #888888;
 }
 
 .no-horizontal-padding {
