feat: add blocked and delegated filters

--- a/src/components/home/views/task-list-view/task-list-filter-container/task-list-filter-wrapper.scss
+++ b/src/components/home/views/task-list-view/task-list-filter-container/task-list-filter-wrapper.scss
@@ -1,12 +1,12 @@
 .task-list-filter-wrapper {
     margin-bottom: 4px;
 
-    .task-list-completion-filter,
-    .task-list-date-filter {
+    .filter {
         display: inline-block;
-    }
-
-    .task-list-date-filter {
         margin-left: 60px;
+
+        &:first-child {
+            margin-left: 0;
+        }
     }
 }
