feat: updating to mobile first layout

--- a/src/components/home/group-filter/group-filter-list.scss
+++ b/src/components/home/group-filter/group-filter-list.scss
@@ -1,5 +1,5 @@
 .group-filter-list {
-    .group-filter-list {
-        padding-left: 10px;
-    }
+    padding: 10px 0 10px 10px;
+    border-top: 5px solid #5E804D;
+    // border-bottom: 5px solid #5E804D;
 }
