--- a/src/components/home/layout/sidebar/sidebar.scss
+++ b/src/components/home/layout/sidebar/sidebar.scss
@@ -1,13 +1,13 @@
 .sidebar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100vh;
+    // position: fixed;
+    // top: 0;
+    // left: 0;
+    // height: 100vh;
     background: #3C393F;
     color: #dbdbdb;
-    float: left;
-    overflow-y: auto;
-    width: 275px;
+    // float: left;
+    // overflow-y: auto;
+    // width: 275px;
     font-size: .9em;
 
     .logo {
