--- a/src/components/home/layout/content/content.scss
+++ b/src/components/home/layout/content/content.scss
@@ -1,10 +1,11 @@
 #content {
-    position: relative;
-    left: 275px;
-    top: 0;
-    width: calc(100% - 275px);
-    float: left;
-    height: 100vh;
+    // position: relative;
+    // left: 275px;
+    // top: 0;
+    // width: calc(100% - 275px);
+    // float: left;
+    // height: 100vh;
+    margin-top: 15px;
 
     &:after {
         display: block;
