--- a/src/components/home/layout/header/header.scss
+++ b/src/components/home/layout/header/header.scss
@@ -1,10 +1,6 @@
-.header {
-    background: #ffffff;
-    border-bottom: 1px solid #e0e0e0;
-    padding: 10px 15px;
-    margin-bottom: 15px;
-    border-radius: 0;
-    float: left;
+header {
+    background: #222222;
+    // border-bottom: 5px solid #5E804D;
     width: 100%;
     font-size: .9em;
 }
