--- a/src/components/home/user-controls/user-controls.scss
+++ b/src/components/home/user-controls/user-controls.scss
@@ -1,5 +1,7 @@
 #user-controls {
-    display: inline-block;
+    margin-top: 100px;
+    // display: inline-block;
+    display: none;
     text-align: right;
     width: 200px;
 
