--- a/src/components/logo/logo.scss
+++ b/src/components/logo/logo.scss
@@ -1,5 +1,5 @@
 .logo {
-    display: inline-block;
+    display: block;
     font-size: .9em;
     text-transform: uppercase;
     letter-spacing: 1px;
