feat: improved layout of filters, will be combined in a 'toolbar' in larger views, on individual lines in mobile

--- a/src/components/home/group-filter/group-filter-header.scss
+++ b/src/components/home/group-filter/group-filter-header.scss
@@ -11,6 +11,12 @@
     }
 
     .group-filter-name {
+        display: inline-block;
+        width: calc(100% - 55px);
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+
         &:hover {
             cursor: pointer;
         }
