--- a/src/components/home/layout/sidebar/sidebar.scss
+++ b/src/components/home/layout/sidebar/sidebar.scss
@@ -9,6 +9,7 @@
     // overflow-y: auto;
     // width: 275px;
     font-size: .9em;
+    border-top: 5px solid #5E804D;
 
     .logo {
         padding: 11px 10px;
