--- a/src/components/home/analytics/analytics.scss
+++ b/src/components/home/analytics/analytics.scss
@@ -1,10 +1,11 @@
 #analytics {
     background: #d3d2d1;
-    border-top: 1px solid #c4c4c4;
-    position: fixed;
-    left: 275px;
-    bottom: 0;
-    width: calc(100% - 275px);
+    // border-top: 1px solid #c4c4c4;
+    border-top: 5px solid #5E804D;
+    // position: fixed;
+    // left: 275px;
+    // bottom: 0;
+    // width: calc(100% - 275px);
     font-size: .9em;
 
     .toggle-bar {
