--- a/src/components/home/views/task-list-view/task-list-filter-container/task-list-filter-wrapper.scss
+++ b/src/components/home/views/task-list-view/task-list-filter-container/task-list-filter-wrapper.scss
@@ -3,10 +3,10 @@
 
     .filter {
         display: inline-block;
-        margin-left: 60px;
+        // margin-left: 60px;
 
-        &:first-child {
-            margin-left: 0;
-        }
+        // &:first-child {
+            // margin-left: 0;
+        // }
     }
 }
