--- a/src/components/home/views/task-list-view/task-list-filter-container/task-list-group-filter-indicator.scss
+++ b/src/components/home/views/task-list-view/task-list-filter-container/task-list-group-filter-indicator.scss
@@ -1,5 +1,5 @@
 .task-list-group-filter-indicator {
-    float: right;
+    // float: right;
     padding: 0 0 10px 0;
     font-size: .9em;
     text-align: right;
