--- a/src/components/home/views/task-list-view/task-list-item/task-list-item.scss
+++ b/src/components/home/views/task-list-view/task-list-item/task-list-item.scss
@@ -8,13 +8,13 @@
         display: inline-block;
         width: calc(100% - 30px);
         margin: 0 0 0 15px;
-        
+
         input {
             display: inline-block;
             background: none;
             border: 1px solid #ffffff;
             font-size: 1.1em;
-            
+
             &:hover {
                 cursor: pointer;
             }
@@ -38,7 +38,7 @@
         .task-name {
             margin-left: 0;
             font-size: 1.3em;
-            font-family: 'Roboto';
+            // font-family: 'Roboto';
             font-weight: 300;
         }
 
@@ -68,7 +68,7 @@
 
     .task-details {
         margin: 15px 30px 0 30px;
-        
+
         textarea.form-control {
             height: 100px;
         }
@@ -83,7 +83,7 @@
                 overflow: hidden;
                 display: inline-block;
                 vertical-align: bottom;
-                -webkit-animation: ellipsis steps(4,end) 900ms infinite;      
+                -webkit-animation: ellipsis steps(4,end) 900ms infinite;
                 animation: ellipsis steps(4,end) 900ms infinite;
                 content: "\2026";
                 width: 0px;
@@ -91,13 +91,13 @@
 
             @keyframes ellipsis {
                 to {
-                    width: 1.25em;    
+                    width: 1.25em;
                 }
             }
 
             @-webkit-keyframes ellipsis {
                 to {
-                    width: 1.25em;    
+                    width: 1.25em;
                 }
             }*/
         }
