--- a/src/components/home/views/task-list-view/task-list-placeholder.scss
+++ b/src/components/home/views/task-list-view/task-list-placeholder.scss
@@ -7,7 +7,7 @@
     .large {
         font-size: 3em;
         font-weight: 100;
-        font-family: 'Roboto';
+        // font-family: 'Roboto';
         display: block;
     }
 }
